--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   api:
     build:
       context: .
-    image: mor1nch/skypro_hw_26
+    image: yagofarovvadim/hw_26
     ports:
       - "80:80"
     platform: linux/amd64
