--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   api:
-    image: mor1nch/skypro_hw_26:$GITHUB_REF_NAME-$GITHUB_RUN_ID
+    image: yagofarovvadim/hw_26:$GITHUB_REF_NAME-$GITHUB_RUN_ID
     ports:
       - "80:80"
     platform: linux/amd64
